--- a/weibo-lite/src/login/index.styl
+++ b/weibo-lite/src/login/index.styl
@@ -1,4 +1,4 @@
-@-moz-document url("https://weibo.com/"),
+@-moz-document  regexp("^.*weibo.com/?(\\?.*)?"),
 url-prefix("https://weibo.com/login") {
 	// 登陆注册样式
 	@import 'signin'
