--- a/weibo-lite/src/public/base.styl
+++ b/weibo-lite/src/public/base.styl
@@ -50,9 +50,9 @@ hr
 	background-color var(--c-border) !important
 
 select
-	border-color var(--c-border)
+	border-color var(--c-border) !important
 	border-radius 4px
-	background-color var(--c-hover)
+	background-color var(--c-hover) !important
 	color var(--c-title) !important
 
 :focus
