--- a/weibo-lite/src/public/button.styl
+++ b/weibo-lite/src/public/button.styl
@@ -6,17 +6,22 @@
 .W_btn_d
 .W_btn_e
 .W_btn_big
+.s-btn-a
+.s-btn-b
+.s-btn-c
+.m-gotop
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
   background-image none !important
   color var(--c-white) !important
   overflow hidden !important
-  vertical-align top
+  vertical-align middle
   cursor pointer
 
   span
   em
+  i
     color var(--c-white) !important
 
   &::after
@@ -36,6 +41,7 @@
 
     span
     em
+    i
       color var(--c-white) !important
 
     &::after
