--- a/weibo-lite/src/public/feed.styl
+++ b/weibo-lite/src/public/feed.styl
@@ -7,12 +7,16 @@
 .WB_feed .WB_cardwrap[action-type='fl_loadmore_middle']
 .WB_feed_v3 .WB_cardtitle_b
 .WB_func .WB_handle .W_arrow_bor
+.card-wrap .card-top
+.card-together .header
   display none
 
 #v6_pl_content_publishertop
 .WB_feed .WB_cardwrap
 .W_layer .scroller .info_box
 .WB_feed_repeat
+.card-wrap
+.card-together
   background-color var(--c-background) !important
 
 .WB_feed_v3 .WB_expand.S_bg1
@@ -20,6 +24,9 @@
 .SW_fun_bg_active
 .S_bg1
 .W_btn_alpha
+.media-item-a
+.card-comment .con
+.media-info
   background-color var(--c-hover)
 
 .S_bg3
@@ -46,6 +53,7 @@ a:hover em
   color var(--c-accent) !important
 
 .S_line1
+.card-review
   border-color var(--c-border)
 
 .S_bg1_br
@@ -58,15 +66,24 @@ a:hover em
 .layer_multipic_preview .pic_choose_box li.current a
   border-color var(--c-accent)
 
+.s-arrow-t
+  border-bottom-color var(--c-hover)
+
 .WB_feed_handle .WB_row_line
 .WB_row_line .line
 .WB_func .WB_handle li .line
 .layer_add_collect .tip-box
 .W_layer .content
+.card-wrap
+.card-wrap .card-act
+.card-wrap .card-act li a
+.card-comment .act li
+.card-together
   border 0
 
 .WB_feed .WB_cardwrap
 .WB_feed_v3 .WB_expand
+.card-wrap
   border-radius 4px
 
 .WB_cardwrap
