--- a/weibo-lite/src/public/header.styl
+++ b/weibo-lite/src/public/header.styl
@@ -29,6 +29,10 @@
 .WB_global_nav .ficon_send
 	color var(--c-title) !important
 
+.WB_global_nav .gn_set_list .W_new_count
+.WB_global_nav .gn_topmenulist ul li .W_new_count
+	color var(--c-white) !important
+
 .FRAME_main .WB_global_nav .gn_nav_list li .home em
 	color var(--c-accent) !important
 
