--- a/weibo-lite/src/index.styl
+++ b/weibo-lite/src/index.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           weibo-lite
 @namespace      tolking-usercss
-@version        1.0.0
+@version        1.0.1
 @description    一个简化的新浪微博页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/weibo-lite
@@ -37,3 +37,4 @@
 @import 'message'
 @import 'setting'
 @import 'login'
+@import 'search'
