--- a/weibo-lite/src/public/button.styl
+++ b/weibo-lite/src/public/button.styl
@@ -1,7 +1,6 @@
 // button
 .W_gotop
 .W_btn_a
-.W_btn_b
 .W_btn_c
 .W_btn_d
 .W_btn_e
@@ -51,6 +50,7 @@
 .W_btn_a_disable
 .W_btn_b
 .private_dialogue_box .private_dialogue_body .msg_bubble_list .W_btn_b
+.artical_add_box .btn_line a
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
