--- a/weibo-lite/src/public/feed.styl
+++ b/weibo-lite/src/public/feed.styl
@@ -27,6 +27,7 @@
 .media-item-a
 .card-comment .con
 .media-info
+.W_tips.tips_rederror
   background-color var(--c-hover)
 
 .S_bg3
@@ -79,6 +80,7 @@ a:hover em
 .card-wrap .card-act li a
 .card-comment .act li
 .card-together
+.W_tips.tips_rederror
   border 0
 
 .WB_feed .WB_cardwrap
