--- a/weibo-lite/src/public/background.styl
+++ b/weibo-lite/src/public/background.styl
@@ -64,6 +64,7 @@
 .WB_feed_v3 .WB_media_a .W_icon_tag_v2
 .S_spetxt_bg
 .W_new_count
+.W_icon_original
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
